[project]
name = "cloud-file-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.33",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.171.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-storage>=3.1.0",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]
